adjustments to figures

--- a/seccion_01_numpy/01.03_operaciones_de_agregacion.ipynb
+++ b/seccion_01_numpy/01.03_operaciones_de_agregacion.ipynb
@@ -3,7 +3,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "2f106e1b",
+   "id": "805b0384",
    "metadata": {},
    "source": [
     "# CLASE 1.3: OPERACIONES DE AGREGACIÓN\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "892472bf",
+   "id": "23ef13a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49fed212",
+   "id": "9f379fff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "639feba9",
+   "id": "9893b873",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80c256d2",
+   "id": "67d485c5",
    "metadata": {},
    "source": [
     "Notemos que si, en vez de escribir `b = 2.0`, ponemos `b = np.array([2.0, 2.0, 2.0, 2.0])`, la suma `a + b` entrega exactamente el mismo resultado:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "618c0710",
+   "id": "43c66cf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "90d918e6",
+   "id": "14588b89",
    "metadata": {},
    "outputs": [
     {
@@ -103,10 +103,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b2f43d8",
+   "id": "dc463af6",
    "metadata": {},
    "source": [
-    "Podemos pensar entonces que el escalar `b = 2.0`, en el primero de los dos bloques de código anteriores, se *estira* en la dirección del eje 0, durante la operación `a + b`, para empatar su geometría (o dimensión) con la del arreglo `a`. Los nuevos elementos en `b`, como se ilustra en la Fig (3.1), son simplemente copias del escalar original. Naturalmente, este estiramiento no es más que una analogía, porque **Numpy** es lo suficientemente*listo* para usar el valor escalar original sin la necesidad de tener que hacer copias compatibles de los arreglos involucrados, que permitan que la operación se lleve a cabo. De esta manera, las operaciones algebraicas como la del ejemplo anterior pueden llevarse a cabo con la mayor eficiencia posible en sus cómputos.\n",
+    "Podemos pensar entonces que el escalar `b = 2.0`, en el primero de los dos bloques de código anteriores, se *estira* en la dirección del eje 0, durante la operación `a + b`, para empatar su geometría (o dimensión) con la del arreglo `a`. Los nuevos elementos en `b`, como se ilustra en la Fig (3.1), son simplemente copias del escalar original. Naturalmente, este estiramiento no es más que una analogía, porque **Numpy** es lo suficientemente *listo* para usar el valor escalar original sin la necesidad de tener que hacer copias compatibles de los arreglos involucrados, que permitan que la operación se lleve a cabo. De esta manera, las operaciones algebraicas como la del ejemplo anterior pueden llevarse a cabo con la mayor eficiencia posible en sus cómputos.\n",
+    "\n",
+    "![alt text](https://github.com/rquezadac/udd_data_analytics_lectures/blob/main/seccion_01_numpy/figures/fig_3_1.png?raw=true \"Logo Title Text 1\")\n",
+    "<p style=\"text-align: center;\">Fig. (3.1): Esquema de broadcasting entre un arreglo 1D y un escalar</p>\n",
     "\n",
     "El caso anterior es muy sencillo. Sin embargo, el broadcasting ocurre siempre que operamos con arreglos en cualquier dimensión. Consideremos en esta oportunidad un arreglo `M` de estructura bidimensional:"
    ]
@@ -114,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e4e5e35e",
+   "id": "0ded1ee9",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +143,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "8eac64a7",
+   "id": "85155825",
    "metadata": {},
    "source": [
     "Observemos los resultados de operar con el arreglo `M` y el arreglo `a`:"
@@ -149,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "923280af",
+   "id": "c281412a",
    "metadata": {},
    "outputs": [
     {
@@ -174,10 +177,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "3741d3eb",
+   "id": "1fa0bb6b",
    "metadata": {},
    "source": [
     "Vemos pues que el arreglo unidimensional a se estira a lo largo del eje 0, a fin de poder generar un match con la geometría de `M `y que la operación `M + a` tenga sentido y pueda ser ejecutada sin ningún problema, como se ilustra en la Fig. (3.2). Nuevamente, esto es una mera analogía que nunca ocurre en la realidad, y que sólo se establece para entender cómo opera el proceso de broadcasting.\n",
+    "\n",
+    "![alt text](https://github.com/rquezadac/udd_data_analytics_lectures/blob/main/seccion_01_numpy/figures/fig_3_2.png?raw=true \"Logo Title Text 1\")\n",
+    "<p style=\"text-align: center;\">Fig. (3.2): Esquema de broadcasting entre un arreglo 2D y un arreglo 1D</p>\n",
     "\n",
     "Los casos presentados previamente son sencillos de entender. Sin embargo, en la práctica, el broadcasting de arreglos puede dar lugar a situaciones bastante más complicadas. Consideremos, por ejemplo, el siguiente caso:"
    ]
@@ -185,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5583a60f",
+   "id": "26a035f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dc31b734",
+   "id": "ecf1f8e4",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5700ad24",
+   "id": "7cff0bb4",
    "metadata": {},
    "outputs": [
     {
@@ -244,10 +250,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "d69fd48e",
+   "id": "efa11fdd",
    "metadata": {},
    "source": [
     "Tal y como ocurrió en los ejemplos anteriores, donde habíamos estirado un valor para generar un match entre las geometrías de cada arreglo, aquí hemos estirado ambos, `u` y `v`, para generar un match respecto a una geometría común para ambos arreglos, y el resultado es un arreglo de geometría `(3, 3)`. La representación el broadcasting subyacente a esta operación se representa en la Fig. (3.3).\n",
+    "\n",
+    "![alt text](https://github.com/rquezadac/udd_data_analytics_lectures/blob/main/seccion_01_numpy/figures/fig_3_3.png?raw=true \"Logo Title Text 1\")\n",
+    "<p style=\"text-align: center;\">Fig. (3.3): Esquema de broadcasting entre dos arreglos en ejes distintos</p>\n",
     "\n",
     "## Reglas de broadcasting.\n",
     "Cuando operamos sobre dos arreglos, **Numpy** compara sus geometrías dimensión a dimensión, partiendo siempre desde la que está más a la derecha y avanzando hacia la izquierda (por ejemplo, en el caso de dos arreglos bidimensionales, esto significa que primero se compara el número de columnas de ambos, y luego el número de filas). Diremos que, en esta comparación, dos dimensiones son compatibles para una operación si:\n",
@@ -269,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "22fe0e2a",
+   "id": "ff21876b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c78224",
+   "id": "e97b1070",
    "metadata": {},
    "source": [
     "Ahora consideremos una operación sobre estos arreglos. Las geometrías de éstos son:"
@@ -288,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "42c75920",
+   "id": "9a6862a6",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "03393545",
+   "id": "a40800c3",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +339,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "ea439713",
+   "id": "4f3ab390",
    "metadata": {},
    "source": [
     "Vemos, por la regla 1, que el arreglo a tiene menos dimensiones, por lo que ajustamos su primera dimensión (a la izquierda) a 1:\n",
@@ -349,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2a8bef32",
+   "id": "ea94037e",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +380,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "283f86c8",
+   "id": "3b1a81e8",
    "metadata": {},
    "source": [
     "◼︎\n",
@@ -382,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "434bce87",
+   "id": "6844ade1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +402,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "2068e4fd",
+   "id": "57179a74",
    "metadata": {},
    "source": [
     "De nuevo, partimos escribiendo la forma de estos arreglos:\n",
@@ -417,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2b8c1e8d",
+   "id": "c00a8310",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +449,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "73e253aa",
+   "id": "e9220dfd",
    "metadata": {},
    "source": [
     "◼︎\n",
@@ -451,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "39822df0",
+   "id": "8fa544d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +471,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "4155a1e4",
+   "id": "f3ad912d",
    "metadata": {},
    "source": [
     "Las geometrías de los arreglos son las siguientes:\n",
@@ -486,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1fdd2720",
+   "id": "fe04772e",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +516,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "00753580",
+   "id": "d799dda6",
    "metadata": {},
    "source": [
     "Las operaciones de broadcasting conforman el eje central de muchos ejemplos que veremos en esta asignatura. Veremos algunos ejemplos que podrían ser útiles para entender cómo trabaja esta funcionalidad en la práctica. ◼︎\n",
@@ -522,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f0596c8a",
+   "id": "70008b1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +543,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "c8d7cba2",
+   "id": "067fa7ca",
    "metadata": {},
    "source": [
     "Aprovechando las reglas de broadcasting, podemos calcular los valores de la función $f$ en el interior de la grilla rectangular $\\Omega$ de manera sencilla:"
@@ -543,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5cc11c4c",
+   "id": "8acee740",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82e53974",
+   "id": "9d706d1a",
    "metadata": {},
    "source": [
     "Para graficar, usaremos la librería **Matplotlib**. No es necesario, por el momento, ahondar en los detalles del siguiente código para generar el gráfico, pero es bueno tener en consideración su estructura cuando, más adelante, discutamos en profundidad todo lo relativo a graficación. El gráfico que construiremos será un mapa de color que muestra las variaciones de $f$ en un espectro bidimensional:"
@@ -576,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a3d6a0c5",
+   "id": "b395a01d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4537ab4b",
+   "id": "ba75dd24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "85c69a82",
+   "id": "43d3c4e2",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +634,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "e5313656",
+   "id": "ec951bc6",
    "metadata": {},
    "source": [
     "◼︎\n",
@@ -650,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8dbb13aa",
+   "id": "d6c92638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a3fba154",
+   "id": "cf66dfb5",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30b72f5e",
+   "id": "c02b8d3d",
    "metadata": {},
    "source": [
     "Para aplicar el escalamiento previamente definido, podemos calcular la media y la desviación estándar aplicando los métodos `mean()` y `std()`, respectivamente, sobre el arreglo `T`. Estas operaciones son ejemplos de lo que, en **Numpy**, se conoce como operaciones de agregación, ya que permiten obtener resultados agregados conforme la operación se realice a lo largo del eje 0, 1, 2, etc., mediante el uso del argumento `axis`. Por lo tanto, debido a que la normalización previamente definida se realiza por columna, los cálculos de la media y desviación estándar se hacen por columnas; es decir, conforme el eje 0. De esta manera, tenemos:"
@@ -700,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7b8c21e4",
+   "id": "9b2dd3bc",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +738,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "36c04748",
+   "id": "6bbe1f4b",
    "metadata": {},
    "source": [
     "Nuestro arreglo `Z` normalizado tiene media aproximadamente nula y desviación estándar unitaria. En efecto,"
@@ -738,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a9268372",
+   "id": "a2b88714",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9874a6a0",
+   "id": "0121eba2",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +791,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "4f2d11e9",
+   "id": "9cc915e2",
    "metadata": {},
    "source": [
     "◼︎\n",
@@ -797,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "12f3f1ef",
+   "id": "ea3bbb4a",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9ecf0a7a",
+   "id": "969b8df0",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a5814fe4",
+   "id": "9dd81ebc",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1a912051",
+   "id": "7f16a662",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "4e8c1dba",
+   "id": "5f07bd62",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c151cc7",
+   "id": "2bd5ec26",
    "metadata": {},
    "source": [
     "◼︎\n",
@@ -920,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9c5b680b",
+   "id": "8f4a67d1",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "c6da8aae",
+   "id": "85770d62",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80dcfd2f",
+   "id": "25f237a7",
    "metadata": {},
    "source": [
     "**Ejemplo 3.8 – Media y desviación estándar:** En el **Ejemplo 3.5** ya revisamos como calcular medias y desviaciones estándar en forma agregada sobre arreglos de **Numpy**, pero no está demás explicitarlo nuevamente:"
@@ -980,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "74cbde11",
+   "id": "7577a976",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "534aece5",
+   "id": "2aab7850",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4191b541",
+   "id": "eaa616fc",
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e39342e",
+   "id": "61e2a009",
    "metadata": {},
    "source": [
     "◼︎\n",
@@ -1058,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6f38b2a6",
+   "id": "febc97d4",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "42debe08",
+   "id": "05b7ca9d",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1111,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "2e777577",
+   "id": "05d37fc8",
    "metadata": {},
    "source": [
     "Con frecuencia, nos interesa conocer las posiciones relativas de los valores máximos y mínimos en ciertos ejes de un arreglo. Para ello, podemos usar las funciones `np.argmax()` y `np.argmin()`, que también permiten obtener resultados agregados:"
@@ -1111,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "27a33ffd",
+   "id": "0f3cbe7b",
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0b4a27e2",
+   "id": "5d79f8d0",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1164,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "1a66f92e",
+   "id": "92e06b85",
    "metadata": {},
    "source": [
     "**Numpy** nos provee de muchas otras funciones de agregación, pero no las discutiremos en detalle aquí. Adicionalmente, la mayoría de estas funciones tienen versiones que permiten operar en arreglos que contengan NaNs (recordemos que NaN –o `np.nan`– en la terminología de **Numpy**, es un valor que no es numérico), debido a que NaN es un elemento que podemos denominar como absorbente, debido a que cualquier operación aritmética que involucre NaNs dará como resultado, en general, otro NaN.\n",
