some minor corrections

--- a/seccion_02_pandas/clase_2_2.ipynb
+++ b/seccion_02_pandas/clase_2_2.ipynb
@@ -973,7 +973,7 @@
     "Vamos a hacer algunas operaciones sobre nuestro DataFrame. Una muy común es la construcción de atributos categóricos cuyo valor representa un rango para otra variable que ya es numérica. Una de las columnas en nuestro DataFrame, como podemos observar, representa la frecuencia de fracturas asociada a un conjunto de pilares, la que es una medida de la calidad de la roca que conforma cada pilar. Supongamos que se establece la siguiente clasificación para dicha calidad:\n",
     "\n",
     "- Si $FF\\leq 1.25$, entonces la roca es de buena calidad.\n",
-    "- Si $1.25<FF\\leq 2.25$, entonces la roca es de calidad regular.\n",
+    "- Si $FF\\in (1.25,2.25]$, entonces la roca es de calidad regular.\n",
     "- Si $FF>2.25$, entonces la roca es de mala calidad.\n",
     "\n",
     "Podemos crear una nueva columna en nuestro DataFrame que represente esta clasificación. Una opción natural es usar un loop de tipo `for`, con sentencias condicionales para ir generando los valores de la nueva columna conforme revisamos, fila a fila, el valor de la frecuencia de fracturas. Esta es, indudablemente, una operación que requiere de una iteración por filas. Definamos una función para hacer este trabajo:"
@@ -4547,7 +4547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c53249a",
+   "id": "879aaf24",
    "metadata": {},
    "source": [
     "Un total de 35 outliers eliminados de las 1000 observaciones originales. ◼︎\n",
@@ -4570,7 +4570,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6fc52bdb",
+   "id": "dfaa058a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4584,7 +4584,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "c90245f2",
+   "id": "0e01d3a1",
    "metadata": {},
    "outputs": [
     {
@@ -4719,7 +4719,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "5198910a",
+   "id": "e483cd6f",
    "metadata": {},
    "outputs": [
     {
@@ -4929,7 +4929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95302187",
+   "id": "74b1b0b7",
    "metadata": {},
    "source": [
     "Notemos que, efectivamente, la diagonal principal de esta matriz está conformada únicamente por 1s,. debido a que cualquier variable correlacionada consigo mismo tiene un coeficiente de correlación igual a 1.\n",
@@ -4940,7 +4940,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "4b181872",
+   "id": "b6b45de8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4951,7 +4951,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "0e196d6e",
+   "id": "24abb8a7",
    "metadata": {},
    "outputs": [
     {
