--- a/seccion_02_pandas/clase_2_5.ipynb
+++ b/seccion_02_pandas/clase_2_5.ipynb
@@ -1423,8 +1423,7 @@
     "\n",
     "Sea pues $\\left\\{x_{t}\\right\\}$ una serie de tiempo, donde $t$ es cualquier observación arbitraria dentro del dominio de dicha serie. Sea $\\bar{x}$ la media de las observaciones que conforman la serie $\\left\\{x_{t}\\right\\}$. Definimos la **función de autocorrelación con retardo o *lag* $k$** como\n",
     "\n",
-    "<p style=\"text-align: center;\">$r_{k}\\left( x_{t}\\right)  =\\displaystyle \\frac{\\displaystyle \\sum\\nolimits^{n}_{t=k+1} \\left( x_{t}-\\bar{x} \\right)  \\left( \\left( x_{t-k}-\\bar{x} \\right)  \\right)  }{\\displaystyle \\sum\\nolimits^{n}_{t=1} \\left( x_{t}-\\bar{x} \\right)^{2}  } $</p>\n",
-    "</p> <p style=\"text-align: right;\">$(5.1)$</p>\n",
+    "$$r_{k}\\left( x_{t}\\right)  =\\displaystyle \\frac{\\displaystyle \\sum\\nolimits^{n}_{t=k+1} \\left( x_{t}-\\bar{x} \\right)  \\left( \\left( x_{t-k}-\\bar{x} \\right)  \\right)  }{\\displaystyle \\sum\\nolimits^{n}_{t=1} \\left( x_{t}-\\bar{x} \\right)^{2}  } $$\n",
     "\n",
     "Donde $x_{t} = x(t)$ es la realización de la serie $\\left\\{x_{t}\\right\\}$ en el tiempo $t$.\n",
     "\n",
