scipy 1st lecture + some minor changes

--- a/seccion_02_pandas/clase_2_1.ipynb
+++ b/seccion_02_pandas/clase_2_1.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4c153924",
    "metadata": {},
@@ -31,7 +30,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "496ce753",
    "metadata": {},
@@ -198,7 +196,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7915b423",
    "metadata": {},
@@ -266,7 +263,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "41a21b0d",
    "metadata": {},
@@ -447,7 +443,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5ad0e8ea",
    "metadata": {},
@@ -483,7 +478,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c511c190",
    "metadata": {},
@@ -795,7 +789,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ec98059a",
    "metadata": {},
@@ -1145,7 +1138,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fd2af27b",
    "metadata": {},
@@ -2262,7 +2254,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b3c02ce6",
    "metadata": {},
@@ -2660,7 +2651,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "40ea97b9",
    "metadata": {},
@@ -2697,7 +2687,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "178b83b1",
    "metadata": {},
@@ -3007,7 +2996,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6d69c982",
    "metadata": {},
@@ -3215,7 +3203,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "60d3d65e",
    "metadata": {},
@@ -4012,7 +3999,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8ec9f7c3",
    "metadata": {},
@@ -4338,7 +4324,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cf5debf9",
    "metadata": {},
@@ -4906,9 +4891,9 @@
    "id": "81bf534a",
    "metadata": {},
    "source": [
-    "Entendamos bien este código: El método query() funciona por medio de evaluaciones de expresiones. En este caso, la expresión a evaluar e ``\"`Tratamiento CH1` > 3500 & `UE CAEX` >= 60\"``. Usamos tildes para diferenciar los rótulos de columnas (por ejemplo, ```UE CAEX```), debido a que tales rótulos presentan espacios (whitespaces). De no existir tales espacios, la diferenciación de los rótulos de columna mediante tildes no es necesaria.\n",
+    "Entendamos bien este código: El método `query()` funciona por medio de evaluaciones de expresiones. En este caso, la expresión a evaluar e ``\"`Tratamiento CH1` > 3500 & `UE CAEX` >= 60\"``. Usamos tildes para diferenciar los rótulos de columnas (por ejemplo, ```UE CAEX```), debido a que tales rótulos presentan espacios (whitespaces). De no existir tales espacios, la diferenciación de los rótulos de columna mediante tildes no es necesaria.\n",
     "\n",
-    "El método `query()` está construido sobre otro método (de nivel superior) denominado `eval()`, que también se aplica a cualquier serie o DataFrame. El método `eval()` permite evaluar expresiones del mismo tipo que usamos en el método `query()`, retornando una serie con los mismos índices de fila que la serie o DataFrame originales, pero con valores Booleanos. Se asigna el valor True si dicha fila cumple con la condición evaluada previamente:"
+    "El método `query()` está construido sobre otro método (de nivel superior) denominado `eval()`, que también se aplica a cualquier serie o DataFrame. El método `eval()` permite evaluar expresiones del mismo tipo que usamos en el método `query()`, retornando una serie con los mismos índices de fila que la serie o DataFrame originales, pero con valores Booleanos. Se asigna el valor `True` si dicha fila cumple con la condición evaluada previamente:"
    ]
   },
   {
